Add UI buttons and adjust enemies.: D

--- a/SugarcoatedSlaughter/Config/DefaultEngine.ini
+++ b/SugarcoatedSlaughter/Config/DefaultEngine.ini
@@ -278,3 +278,11 @@ DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOu
 MinDeltaVelocityForHitEvents=0.000000
 ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+bPackageDataInsideApk=True
+bDisableVerifyOBBOnStartUp=True
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+bForceRebuildOnLoad=True
+
