--- a/SugarcoatedSlaughter/Config/DefaultEngine.ini
+++ b/SugarcoatedSlaughter/Config/DefaultEngine.ini
@@ -281,6 +281,7 @@ ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableC
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 bPackageDataInsideApk=True
 bDisableVerifyOBBOnStartUp=True
+bSupportSizeChanges=True
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
