--- a/SugarcoatedSlaughter/SugarcoatedSlaughter.uproject
+++ b/SugarcoatedSlaughter/SugarcoatedSlaughter.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{021B0971-4D79-2858-7816-29BAB7F8B1D0}",
+	"EngineAssociation": "5.4",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
