waterfall and lighting

--- a/SugarcoatedSlaughter/Config/DefaultEngine.ini
+++ b/SugarcoatedSlaughter/Config/DefaultEngine.ini
@@ -138,7 +138,7 @@ r.SelectiveBasePassOutputs=False
 bDefaultParticleCutouts=False
 fx.GPUSimulationTextureSizeX=1024
 fx.GPUSimulationTextureSizeY=1024
-r.AllowGlobalClipPlane=False
+r.AllowGlobalClipPlane=True
 r.GBufferFormat=1
 r.MorphTarget.Mode=True
 r.MorphTarget.MaxBlendWeight=5.000000
@@ -228,6 +228,7 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/SugarcoatedSlaughter")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/SugarcoatedSlaughter")
+NearClipPlane=0.500000
 
 [/Script/Slate.SlateSettings]
 bExplicitCanvasChildZOrder=True
