Adjust some build settings.

--- a/SugarcoatedSlaughter/Config/DefaultEngine.ini
+++ b/SugarcoatedSlaughter/Config/DefaultEngine.ini
@@ -283,6 +283,9 @@ ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableC
 bPackageDataInsideApk=True
 bDisableVerifyOBBOnStartUp=True
 bSupportSizeChanges=True
+PackageName=Ragdoll.Rumble.[PROJECT]
+bUseExternalFilesDir=True
+bPublicLogFiles=False
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
