--- a/SugarcoatedSlaughter/Config/DefaultEngine.ini
+++ b/SugarcoatedSlaughter/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/TestingZone.TestingZone
+GameDefaultMap=/Game/MainMenu/MainMenuMap.MainMenuMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
