Fix enemy AI and improve overall game feel.
Some things like hitboxes, cooldown, amount of health, and other small things changed to make the game feel better.

--- a/SugarcoatedSlaughter/Config/DefaultEngine.ini
+++ b/SugarcoatedSlaughter/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/TestingZone.TestingZone
+EditorStartupMap=/Game/Maps/PrehistoricCave.PrehistoricCave
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
